--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -1,7 +1,43 @@
 {% extends "base.html" %}
 {% block title %}天梯-撸韩服{% endblock%}
 {% block pagecontent %}
-        <div class="container">
-            <h1>撸韩服-天梯</h1>
+        <div class="page-header"><h1>天梯</h1></div>
+        <div class="btn-grp btn-padding">
+            <a class="btn btn-default" href="#" role="button">查看完整天梯</a>
+            <a class="btn btn-primary" href="#" role="button">只看职业选手</a>
+            <a class="btn btn-default" href="#" role="button">只看LPL选手</a>
+            <a class="btn btn-default" href="#" role="button">只看国人</a>
+            <a class="btn btn-default" href="#" role="button">只看路人</a>
         </div>
+        <div class="table-responsive">
+            <table class="table table-stripped table-hover">
+                <thead>
+                    <tr>
+                        <th>排名</th>
+                        <th>比赛ID</th>
+                        <th>队伍</th>
+                        <th>游戏ID</th>
+                        <th>段位</th>
+                        <th>分数</th>
+                        <th>隐藏分</th>
+                        <th>胜率</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for td in ladder_data %}
+                    <tr>
+                        <td>{{ td.rank }}</td>
+                        <td>{{ td.name }}</td>
+                        <td>{{ td.team }}</td>
+                        <td>{{ td.id }}</td>
+                        <td>{{ td.tier }}</td>
+                        <td>{{ td.lp }}</td>
+                        <td>{{ td.mmr }}</td>
+                        <td>{{ td.winratio }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <a class="btn btn-default" href="#" role="button">点击查看更多</a>
 {% endblock %}
