--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -1,60 +1,155 @@
 {% extends "base.html" %}
 {% block title%}查询-撸韩服{% endblock %}
 {% block pagecontent %}
-        <div style="">
-            <dl style="font-size: 20px">
-                <dt style="float: left;margin-right: 25px;">选手服务器</dt>
-                <dd>
-                    <a href="#" >全选</a>
-                    <a href="#">LPL</a>
-                    <a href="#">韩服</a>
-                    <a href="#">台服</a>
-                    <a href="#">美服</a>
-                    <a href="#">欧服</a>
-                </dd>
-                <dl style="font-size: 20px">
-                <dt style="float: left;margin-right: 25px;">选手服务器</dt>
-                <dd>
-                    <a href="#" >全选</a>
-                    <a href="#">LPL</a>
-                    <a href="#">韩服</a>
-                    <a href="#">台服</a>
-                    <a href="#">美服</a>
-                    <a href="#">欧服</a>
-                </dd>
-                <dl style="font-size: 20px">
-                <dt style="float: left;margin-right: 25px;">选手服务器</dt>
-                <dd>
-                    <a href="#" >全选</a>
-                    <a href="#">LPL</a>
-                    <a href="#">韩服</a>
-                    <a href="#">台服</a>
-                    <a href="#">美服</a>
-                    <a href="#">欧服</a>
-                </dd>
-                <dl style="font-size: 20px">
-                <dt style="float: left;margin-right: 25px;">选手服务器</dt>
-                <dd>
-                    <a href="#" >全选</a>
-                    <a href="#">LPL</a>
-                    <a href="#">韩服</a>
-                    <a href="#">台服</a>
-                    <a href="#">美服</a>
-                    <a href="#">欧服</a>
-                </dd>
-                <dl style="font-size: 20px">
-                <dt style="float: left;margin-right: 25px;">选手服务器</dt>
-                <dd>
-                    <a href="#" >全选</a>
-                    <a href="#">LPL</a>
-                    <a href="#">韩服</a>
-                    <a href="#">台服</a>
-                    <a href="#">美服</a>
-                    <a href="#">欧服</a>
-                </dd>
-            </dl>
+        <div class="left_filter">
+            <div class="panel panel-primary">
+                <div class="panel-heading">选手赛区</div>
+                <div class="panel-body">
+                    <ul>
+                        <li><a href="#" class="active">全选</a></li>
+                        <li><a href="#">国服</a></li>
+                        <li><a href="#">韩服</a></li>
+                        <li><a href="#">美服</a></li>
+                        <li><a href="#">台服</a></li>
+                        <li><a href="#">欧服</a></li>
+                        <li><a href="#">路人</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">选手国籍</div>
+                <div class="panel-body">
+                    <ul>
+                        <li><a href="#">全选</a></li>
+                        <li><a href="#" class="active">中国</a></li>
+                        <li><a href="#">韩国</a></li>
+                        <li><a href="#">其他</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">选手战队</div>
+                <div class="panel-body">
+                    <ul>
+                        <li><a href="#" class="active">全选</a></li>
+                        <li><a href="#">EDG</a></li>
+                        <li><a href="#">RNG</a></li>
+                        <li><a href="#">SKT</a></li>
+                        <li><a href="#">ROX</a></li>
+                        <li><a href="#">IMay</a></li>
+                        <li><a href="#">LGD</a></li>
+                        <li><a href="#">WE</a></li>
+                        <li><a href="#">IG</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">选手位置</div>
+                <div class="panel-body">
+                    <ul>
+                        <li><a href="#">全选</a></li>
+                        <li><a href="#">上路</a></li>
+                        <li><a href="#">打野</a></li>
+                        <li><a href="#">中路</a></li>
+                        <li><a href="#" class="active">ADC</a></li>
+                        <li><a href="#">辅助</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="table-responsive">
+        <div class="player_list">
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail">
+                    <a href="#" class="thumbnail">
+                        <img src="../static/img/tmp_img.jpg" alt="...">
+                    </a>
+                    <div class="caption">
+                        <a href="#">UZI</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="player_list">
+            <ul>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            </ul>
+            <ul>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            </ul>
+            <ul>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            </ul>
+        </div> -->
+        <div class="table-responsive table_style">
             <table class="table table-stripped table-hover">
                 <thead>
                     <tr>
