--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -61,7 +61,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -71,7 +71,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -81,7 +81,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -91,7 +91,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -101,7 +101,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -111,7 +111,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
@@ -121,7 +121,7 @@
             <div class="col-sm-6 col-md-3">
                 <div class="thumbnail">
                     <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="...">
+                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
                     </a>
                     <div class="caption">
                         <a href="#">UZI</a>
