finish rest api

--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -7,7 +7,7 @@
             <a class="btn btn-primary" href="#" role="button">只看职业选手</a>
             <a class="btn btn-default" href="#" role="button">只看LPL选手</a>
             <a class="btn btn-default" href="#" role="button">只看国人</a>
-            <a class="btn btn-default" href="#" role="button">只看路人</a>
+            <a class="btn btn-default" href="#" role="button">只看路人王</a>
         </div>
         <div class="table-responsive">
             <table class="table table-stripped table-hover">
