--- a/app/templates/sponsor.html
+++ b/app/templates/sponsor.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'sponsor' -%}
 {% block title%}赞助-撸韩服{% endblock %}
 {% block pagecontent %}
             <div class="container">
