--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 {% block title %}撸韩服{% endblock %}
 {% block metas %}
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">{{super()}}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">{{ super() }}
 {% endblock %}
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
@@ -14,7 +14,14 @@
     <script type="text/javascript" src="{{ url_for('static',filename='js/lolhf.js') }}"></script>
 {% endblock %}
 {% block navbar %}
-   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    {% set navigation_bar = [
+    ('/', 'index', '首页'),
+    ('/ladder', 'ladder', '天梯'),
+    ('/query', 'query', '查询'),
+    ('/sponsor','sponsor','赞助')
+    ] -%}
+    {% set active_page = active_page|default('index') -%}
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,19 +36,22 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-left ">
-                    <li class="active"><a href="{{ url_for('main.index') }}">首页</a></li>
-                    <li><a href="{{ url_for('main.ladder') }}">天梯</a></li>    
-                    <li><a href="{{ url_for('main.query') }}">查询</a></li>
-                    <li><a href="{{ url_for('main.sponsor') }}">赞助</a></li>    
+                    {% for href, id, caption in navigation_bar %}
+                        <li{% if id == active_page %} class="active"{% endif %}><a href="{{ href }}">{{ caption }}</a></li>
+                    {% endfor %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><button type="button" class="btn btn-primary btn-xs navbar-btn">Alpha版本</button></li>
-                    <li><button type="button" class="btn btn-primary btn-xs navbar-btn">免登陆</button></li>
+                    <li>
+                        <button type="button" class="btn btn-primary btn-xs navbar-btn">Alpha版本</button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-primary btn-xs navbar-btn">免登陆</button>
+                    </li>
                 </ul>
                 <p class="navbar-text navbar-right">本站送给喜欢LOL并且关注韩服的召唤师</p>
             </div>
         </div>
-    </nav>    
+    </nav>
 {% endblock %}
 {% block content %}
     <div class="container">
@@ -52,10 +62,10 @@
             </div>
         {% endfor %}
         {% block pagecontent %}{% endblock %}
-         <hr class="divider">
+        <hr class="divider">
         <footer>
             <p class="pull-right"><a href="#top">回到顶部</a></p>
             <p>Copyright © shepherd 2016,powered by flask and bootstrap</p>
         </footer>
-    </div>    
+    </div>
 {% endblock %}
