--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = 'ladder' -%}
 {% block title %}天梯-撸韩服{% endblock%}
 {% block pagecontent %}
         <div class="page-header"><h1>天梯</h1></div>
