--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -1,182 +1,186 @@
 {% extends "base.html" %}
-{% block title%}查询-撸韩服{% endblock %}
+{% set active_page = 'query' -%}
+{% block title %}查询-撸韩服{% endblock %}
 {% block pagecontent %}
-        <div class="left_filter">
-            <div class="panel panel-primary">
-                <div class="panel-heading">选手赛区</div>
-                <div class="panel-body">
-                    <ul>
-                        <li><a href="#" class="active">全选</a></li>
-                        <li><a href="#">国服</a></li>
-                        <li><a href="#">韩服</a></li>
-                        <li><a href="#">美服</a></li>
-                        <li><a href="#">台服</a></li>
-                        <li><a href="#">欧服</a></li>
-                        <li><a href="#">路人</a></li>
-                    </ul>
-                </div>
+    <div class="left_filter">
+        <div class="panel panel-primary">
+            <div class="panel-heading">选手赛区</div>
+            <div class="panel-body">
+                <ul>
+                    <li><a href="#" class="active">全选</a></li>
+                    <li><a href="#">LPL</a></li>
+                    <li><a href="#">LCK</a></li>
+                    <li><a href="#">LMS</a></li>
+                    <li><a href="#">LCS</a></li>
+                    <li><a href="#">路人</a></li>
+                </ul>
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">选手国籍</div>
-                <div class="panel-body">
-                    <ul>
-                        <li><a href="#">全选</a></li>
-                        <li><a href="#" class="active">中国</a></li>
-                        <li><a href="#">韩国</a></li>
-                        <li><a href="#">其他</a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">选手国籍</div>
+            <div class="panel-body">
+                <ul>
+                    <li><a href="#">全选</a></li>
+                    <li><a href="#" class="active">中国</a></li>
+                    <li><a href="#">韩国</a></li>
+                    <li><a href="#">其他</a></li>
+                </ul>
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">选手战队</div>
-                <div class="panel-body">
-                    <ul>
-                        <li><a href="#" class="active">全选</a></li>
-                        <li><a href="#">EDG</a></li>
-                        <li><a href="#">RNG</a></li>
-                        <li><a href="#">SKT</a></li>
-                        <li><a href="#">ROX</a></li>
-                        <li><a href="#">IMay</a></li>
-                        <li><a href="#">LGD</a></li>
-                        <li><a href="#">WE</a></li>
-                        <li><a href="#">IG</a></li>
-                    </ul>
-                </div>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">选手战队</div>
+            <div class="panel-body">
+                <ul>
+                    <li><a href="#" class="active">全选</a></li>
+                    <li><a href="#">EDG</a></li>
+                    <li><a href="#">RNG</a></li>
+                    <li><a href="#">IM</a></li>
+                    <li><a href="#">SKT</a></li>
+                    <li><a href="#">ROX</a></li>
+                    <li><a href="#">SSG</a></li>
+                    <li><a href="#">LGD</a></li>
+                    <li><a href="#">WE</a></li>
+                    <li><a href="#">IG</a></li>
+                    <li><a href="#">OMG</a></li>
+                    <li><a href="#">其他</a></li>
+                </ul>
             </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">选手位置</div>
-                <div class="panel-body">
-                    <ul>
-                        <li><a href="#">全选</a></li>
-                        <li><a href="#">上路</a></li>
-                        <li><a href="#">打野</a></li>
-                        <li><a href="#">中路</a></li>
-                        <li><a href="#" class="active">ADC</a></li>
-                        <li><a href="#">辅助</a></li>
-                    </ul>
+        </div>
+        <div class="panel panel-primary">
+            <div class="panel-heading">选手位置</div>
+            <div class="panel-body">
+                <ul>
+                    <li><a href="#">全选</a></li>
+                    <li><a href="#">上路</a></li>
+                    <li><a href="#">打野</a></li>
+                    <li><a href="#">中路</a></li>
+                    <li><a href="#" class="active">ADC</a></li>
+                    <li><a href="#">辅助</a></li>
+                    <li><a href="#">路人</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="player_list">
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
                 </div>
             </div>
         </div>
-        <div class="player_list">
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail">
-                    <a href="#" class="thumbnail">
-                        <img src="../static/img/tmp_img.jpg" alt="..." width="180" height="180">
-                    </a>
-                    <div class="caption">
-                        <a href="#">UZI</a>
-                    </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
                 </div>
             </div>
         </div>
-        <!-- <div class="player_list">
-            <ul>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            </ul>
-            <ul>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            </ul>
-            <ul>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-                <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            </ul>
-        </div> -->
-        <div class="table-responsive table_style">
-            <table class="table table-stripped table-hover">
-                <thead>
-                    <tr>
-                        <th>排名</th>
-                        <th>比赛ID</th>
-                        <th>队伍</th>
-                        <th>游戏ID</th>
-                        <th>段位</th>
-                        <th>分数</th>
-                        <th>隐藏分</th>
-                        <th>胜率</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for td in ladder_data %}
-                    <tr>
-                        <td>{{ td.rank }}</td>
-                        <td>{{ td.name }}</td>
-                        <td>{{ td.team }}</td>
-                        <td>{{ td.id }}</td>
-                        <td>{{ td.tier }}</td>
-                        <td>{{ td.lp }}</td>
-                        <td>{{ td.mmr }}</td>
-                        <td>{{ td.winratio }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
+                </div>
+            </div>
         </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="thumbnail">
+                <a href="#" class="thumbnail">
+                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                </a>
+                <div class="caption">
+                    <a href="#">UZI</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="player_list">
+        <ul>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+        </ul>
+        <ul>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+        </ul>
+        <ul>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+        </ul>
+    </div> -->
+    <div class="table-responsive table_style">
+        <table class="table table-stripped table-hover">
+            <thead>
+            <tr>
+                <th>排名</th>
+                <th>比赛ID</th>
+                <th>队伍</th>
+                <th>游戏ID</th>
+                <th>段位</th>
+                <th>分数</th>
+                <th>隐藏分</th>
+                <th>胜率</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for td in ladder_data %}
+                <tr>
+                    <td>{{ td.rank }}</td>
+                    <td>{{ td.name }}</td>
+                    <td>{{ td.team }}</td>
+                    <td>{{ td.id }}</td>
+                    <td>{{ td.tier }}</td>
+                    <td>{{ td.lp }}</td>
+                    <td>{{ td.mmr }}</td>
+                    <td>{{ td.winratio }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
