--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = 'ladder' -%}
-{% block title %}&nbsp;&nbsp;&nbsp;-撸韩服{% endblock%}
+{% block title %}&nbsp;&nbsp;&nbsp;天梯-撸韩服{% endblock%}
 {% block pagecontent %}
         <div class="page-header"><h1>天梯</h1></div>
         <div class="btn-grp btn-padding">
