--- a/app/templates/query.html
+++ b/app/templates/query.html
@@ -65,7 +65,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -75,7 +75,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -85,7 +85,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -95,7 +95,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -105,7 +105,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -115,7 +115,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -125,7 +125,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <a href="#" class="thumbnail">
-                    <img src="{{ url_for('static',filename='img/tmp_img.jpg') }}" alt="..." width="180" height="180">
+                    <img src="{{ url_for('static',filename='img/tmp/tmp_img.jpg') }}" alt="..." width="180" height="180">
                 </a>
                 <div class="caption">
                     <a href="#">UZI</a>
@@ -135,22 +135,22 @@
     </div>
     <!-- <div class="player_list">
         <ul>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
         </ul>
         <ul>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
         </ul>
         <ul>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
-            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
+            <li><a href="#"><img class="img-thumbnail" src="../static/img/tmp/tmp_img.jpg" alt="" width="200" height="200"></a></li>
         </ul>
     </div> -->
     <div class="table-responsive table_style">
