--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -9,7 +9,7 @@
         <a class="btn btn-default" href="#" role="button">只看LPL选手</a>
         <a class="btn btn-default" href="#" role="button">只看国人</a>
         <a class="btn btn-default" href="#" role="button">只看路人王</a>
-        <a class="btn btn-default" href="#" role="button">更多查询方式</a>
+        <a class="btn btn-default" href="{{ url_for('main.query') }}" role="button">更多查询方式</a>
     </div>
     <div class="table-responsive">
         <table class="table table-stripped table-hover">
