--- a/app/templates/ladder.html
+++ b/app/templates/ladder.html
@@ -1,37 +1,19 @@
-<table class="table table-stripped table-hover">
-    <thead>
+{% for td in ladder_data %}
     <tr>
-        <th>#</th>
-        <th>比赛ID</th>
-        <th>队伍</th>
-        <th>位置</th>
-        <th>游戏ID</th>
-        <th>分数</th>
-        <th>隐藏分</th>
-        <th>胜场</th>
-        <th>胜率</th>
-        <th>近20场胜率</th>
-        <th>近20场KDA</th>
-        <th>近20场击杀参与率</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for td in ladder_data %}
-        <tr>
-            <td>{{ td.rank }}<img src="{{ url_for('static',filename='img/nation/'~td.player_country~'.png') }}" alt="" class="img-rounded" width="30" height="20"></td>
+        <td>{{ td.rank }}<img src="{{ url_for('static',filename='img/nation/'~td.player_country~'.png') }}" alt="" class="img-rounded" width="30" height="20"></td>
+        {% if  ladder_type !='nonpro' %}
             <td><a href="#"><img src="{{ url_for('static',filename='img/player/'~td.player_name~'.png') }}" alt="" class="img-circle" width="25" height="25">{{ td.player_name }}</a></td>
             <td><a href="#">{{ td.player_team_short_name }}<img src="{{ url_for('static',filename='img/team/'~td.player_team_short_name~'.png') }}" alt="" class="img-circle" width="25"
                                                                 height="25"></a></td>
             <td>{{ td.player_place }}</td>
-            <td><a href="#"><img src="{{ url_for('static',filename='img/gameid/'~td.game_id~'.png') }}" alt="" class="img-circle" width="25" height="25">{{ td.game_id }}</a></td>
-            <td><img src="{{ url_for('static',filename='img/tier/'~td.tier~'.png') }}" alt="" class="img-circle" width="25" height="25" title="{{ td.tier }}">{{ td.lp }}</td>
-            <td>{{ td.mmr }}</td>
-            <td>{{ td.total_win }}</td>
-            <td>{{ td.total_win_ratio }}</td>
-            <td>{{ td.twentywinratio }}</td>
-            <td>{{ td.twentyavgkda }}</td>
-            <td>{{ td.twentyavgck }}</td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+        {% endif %}
+        <td><a href="#"><img src="{{ url_for('static',filename='img/gameid/'~td.game_id~'.png') }}" alt="" class="img-circle" width="25" height="25">{{ td.game_id }}</a></td>
+        <td><img src="{{ url_for('static',filename='img/tier/'~td.tier~'.png') }}" alt="" class="img-circle" width="25" height="25" title="{{ td.tier }}">{{ td.lp }}</td>
+        <td>{{ td.mmr }}</td>
+        <td>{{ td.total_win }}</td>
+        <td>{{ td.total_win_ratio }}</td>
+        <td>{{ td.twentywinratio }}</td>
+        <td>{{ td.twentyavgkda }}</td>
+        <td>{{ td.twentyavgck }}</td>
+    </tr>
+{% endfor %}
